@@ -12,7 +12,7 @@
   <body>
     <div>
       <table>
-        <caption>information</caption>
+        <caption>Information</caption>
         <tbody>
           <tr><th>Message</th><td id="message"></td></tr>
           <tr><th>Title</th><td id="title"></td></tr>
@@ -22,7 +22,7 @@
     </div>
     <div>
       <table>
-        <caption>context information</caption>
+        <caption>Context information</caption>
         <tbody>
           <tr><th>Method</th><td id="context-method"></td></tr>
           <tr><th>Expression</th><td id="context-expression"></td></tr>
@@ -32,14 +32,14 @@
         </tbody>
       </table>
       <table id="context-detail">
-        <caption>context detail</caption>
+        <caption>Context detail</caption>
         <tbody>
         </tbody>
       </table>
     </div>
     <div>
       <table>
-        <caption>main information</caption>
+        <caption>Main information</caption>
         <tbody>
           <tr><th>Method</th><td id="main-method"></td></tr>
           <tr><th>Expression</th><td id="main-expression"></td></tr>
@@ -49,7 +49,7 @@
         </tbody>
       </table>
       <table id="main-details">
-        <caption>main details</caption>
+        <caption>Main details</caption>
         <tbody>
         </tbody>
       </table>
